# fruc_dataset_apparatus

./: .gitignore  .gitmodules  .names_01  .names_02  README.md  launch-system.sh  stop-system.sh
.github/workflows/: build_push.yml
catkin_ws/src/sensor-tools/: CMakeLists.txt  package.xml
catkin_ws/src/sensor-tools/config/: xsens_mti_node.yaml
catkin_ws/src/sensor-tools/launch/: apparatus-melodic.launch  apparatus-noetic.launch  lidar_driver_ros1.launch  livox_mid70.launch  mynteye.launch  reach_m2.launch  realsense_d435i.launch  rs_camera.launch  system_monitoring.launch  velarray.launch  view_d435i.launch  xsens_610R.launch  xsens_imu.launch
catkin_ws/src/sensor-tools/mesh/: xsens_mti.urdf.xacro
catkin_ws/src/sensor-tools/scripts/: system_monitoring.py
catkin_ws/src/sensor-tools/urdf/: mynteye_S3010.urdf  sensor-box.urdf  xsens_mti_example.urdf
docker/: .env-pc_register  Dockerfile  Dockerfile.melodic  Dockerfile.noetic  docker-compose.yml  docker-compose_bak.yml  melodic-launch.sh  melodic-slam-launch.sh  melodic-slam.Dockerfile  melodic.Dockerfile  noetic-launch.sh  noetic.Dockerfile  pre_recording_test.sh  record-launch.sh  record.Dockerfile  rosbridge.Dockerfile
ros2_ws/: 169.254.49-metadata.json
ros2_ws/shared/: apparatus.urdf.xacro  apparatus_calibrated.urdf.xacro  lidar_packet_handler.h  ouster_config.yaml  ouster_mod_entrypoint.sh  replay_runtime.launch.xml
ros2_ws/shared/scripts/: emlid-launch.sh  mtdevice.py  mtnode.py  realsense-launch.sh  xsens-launch.sh  xsens.launch.xml
ros2_ws/src/sensor_tools/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_tools/config/: global_settings.yaml  ouster.yaml
ros2_ws/src/sensor_tools/launch/: emlid_reach.launch.py  ouster.launch.py  rs_launch.py  xsens.launch.xml
rviz/: mynt.rviz  realsense.rviz  tf_align_pointclouds.rviz  tiled.rviz  xsens_imu.rviz
